--- a/contact.html
+++ b/contact.html
@@ -195,8 +195,8 @@ button[type="submit"]:hover {
       <p><strong>Address:</strong> Hồ Chí Minh, Việt Nam</p>
       <p class="social-links">
         <strong>Socials:</strong>
-        <a href="https://github.com/yourprofile" target="_blank">GitHub</a>
-        <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
+        <a href="https://github.com/ndphucan111" target="_blank">GitHub</a>
+        <a href="www.linkedin.com/in/ndphucan" target="_blank">LinkedIn</a>
       </p>
     </div>
 
