--- a/aboutme.html
+++ b/aboutme.html
@@ -238,7 +238,7 @@ nav a:hover {
 
   <div class="container">
     <div class="profile">
-      <img src="your-photo.jpg" alt="Ảnh đại diện của bạn"> <!-- 🔁 Thay ảnh tại đây -->
+      <img src="profile.jpg" alt="Ảnh đại diện của bạn"> <!-- 🔁 Thay ảnh tại đây -->
       <div class="info">
         <h2 data-en="Your Name" data-vi="Tên của bạn">Nguyen Do Phuc An</h2>
         <p data-en="Co28 Fulbrighter - 2nd Year of Fulbright University Vietnam" data-vi="Co28 Fulbrighter - Năm thứ 2 Đại học Fulbright Việt Nam"> Co28 Fulbrighter - 2nd Year of Fulbright University Vietnam</p>
