--- a/aboutme.html
+++ b/aboutme.html
@@ -240,7 +240,7 @@ nav a:hover {
     <div class="profile">
       <img src="img/profile.jpg" alt="Ảnh đại diện của bạn"> <!-- 🔁 Thay ảnh tại đây -->
       <div class="info">
-        <h2 data-en="Your Name" data-vi="Tên của bạn">Nguyen Do Phuc An</h2>
+        <h2 data-en="Nguyen Do Phuc An" data-vi="Nguyen Do Phuc An">Nguyen Do Phuc An</h2>
         <p data-en="Co28 Fulbrighter - 2nd Year of Fulbright University Vietnam" data-vi="Co28 Fulbrighter - Năm thứ 2 Đại học Fulbright Việt Nam"> Co28 Fulbrighter - 2nd Year of Fulbright University Vietnam</p>
         <p>Email: <a href="mailto:ndphucan@gmail.com" style="color: #fff;">ndphucan@gmail.com</a></p>
       </div>
