--- a/education.html
+++ b/education.html
@@ -591,11 +591,22 @@ Minor: Business, Policy and Society</h2>
         robotics, autonomous driving systems, face and speech recognition, etc.
       </p>
 
-      <p data-en="Assignment 1 - Object History:" data-vi="Bài tập 1 - Lịch sử vật thể:">
-    Assignment 2 - Object History:
+      <p data-en="Assignment 1 - Naive Bayes classification:" data-vi="Bài tập 1 - Phân loại Naive Bayes:">
+    Assignment 1 - Naive Bayes classification:
   </p>
   <p>
-    <a href="https://drive.google.com/drive/folders/1XfvuPXNplOQQXodFMnKtH-Vn8bh1fYop?usp=sharing" target="_blank"
+    <a href="https://drive.google.com/drive/folders/1flJM3ri6tPKx9e1FhG_TvqIgiXh6JM6r?usp=sharing" target="_blank"
+       data-en="Including: csv file, questions and answers"
+       data-vi="Bao gồm: file csv, câu hỏi và câu trả lời">
+       Including: csv file, questions and answers
+    </a>
+  </p>
+
+  <p data-en="Assignment 2 - Unsupervised Learning:" data-vi="Bài tập 2 - Học không giám sát:">
+    Assignment 2 - Unsupervised Learning:
+  </p>
+  <p>
+    <a href="https://drive.google.com/drive/folders/1bWsSuuS1hkqMqnOSrVp2BFeQUHG0Qifx?usp=sharing" target="_blank"
        data-en="Including: csv file, questions and answers"
        data-vi="Bao gồm: file csv, câu hỏi và câu trả lời">
        Including: csv file, questions and answers
@@ -660,7 +671,7 @@ Minor: Business, Policy and Society</h2>
     1st Month Essay:
   </p>
   <p>
-    <a href="https://drive.google.com/drive/folders/1XfvuPXNplOQQXodFMnKtH-Vn8bh1fYop?usp=sharing" target="_blank"
+    <a href="https://drive.google.com/file/d/17Oim9MpuTrGrRXc5lnJ6cwoHR2noq8YQ/view?usp=sharing" target="_blank"
        data-en="Including: essay"
        data-vi="Bao gồm: bài luận">
        Including: essay
