--- a/experience.html
+++ b/experience.html
@@ -280,7 +280,7 @@ h2 {
       <p data-en="Planned, organized, and coordinated school events." 
          data-vi="Lên kế hoạch, tổ chức và điều phối sự kiện của trường.">
          Planned, organized, and coordinated school events.
-         <br><strong>Example:</strong> <a>Spirit Week, Year-end Concert, Election,...</a>
+         <br><strong>Example:</strong>Spirit Week, Year-end Concert, Election,...
       </p>
 
       <p data-en="Come up with ideas for concepts, decorate the stage, contact and find vendors,..." 
