--- a/experience.html
+++ b/experience.html
@@ -296,6 +296,30 @@ h2 {
   </div>
 </div>
 
+<div class="experience" onclick="toggleExperience(this)">
+    <div class="experience-title" 
+         data-en="4. Water Station Volunteer - United Way’s ClimbUP in Toronto, Canada" 
+         data-vi="4. Tình nguyện viên trạm nước - ClimbUP của United Way tại Toronto, Canada">
+      4. Volunteer - United Way’s ClimbUP in Toronto, Canada
+    </div>
+
+    <div class="experience-time" 
+       data-en="Oct 2023" 
+       data-vi="10/2023">
+   Oct 2023
+  </div>
+
+    <div class="experience-content">
+      <p data-en="United Way’s ClimbUP is an annual event that climbs the CN Tower in downtown Toronto to raise funds for volunteer work. I was involved in logistics, preparation, cleanup, and also distributing water." 
+         data-vi="United Way’s ClimbUP là một sự kiện thi leo tháp CN tại downtown Toronto, sự kiện này được tổ chức cố định hằng năm nhằm mục đích gây quỹ tình nguyện. Tôi đã tham gia khâu hậu cần, chuẩn bị, thu dọn sau sự kiện và cũng như phân phát nước.  ">
+         United Way’s ClimbUP is an annual event that climbs the CN Tower in downtown Toronto to raise funds for volunteer work. I was involved in logistics, preparation, cleanup, and also distributing water.
+         <br><strong>A little memory of mine:</strong><a href="https://www.instagram.com/p/C-vpaYfMSNM/?utm_source=ig_web_copy_link">#climbup2024</a>
+      </p>
+    </div>
+  </div>
+</div>
+
+
   <script>
     let currentLanguage = 'en';
 
