--- a/experience.html
+++ b/experience.html
@@ -296,17 +296,41 @@ h2 {
   </div>
 </div>
 
+
 <div class="experience" onclick="toggleExperience(this)">
     <div class="experience-title" 
-         data-en="4. Water Station Volunteer - United Way’s ClimbUP in Toronto, Canada" 
-         data-vi="4. Tình nguyện viên trạm nước - ClimbUP của United Way tại Toronto, Canada">
-      4. Volunteer - United Way’s ClimbUP in Toronto, Canada
+         data-en="4. Volunteer - Weston Winterfest Event in Toronto, Canada" 
+         data-vi="4. Tình nguyện viên - Sự Kiện Weston Winterfest tại Toronto, Canada">
+      4. Volunteer - Weston Winterfest Event in Toronto, Canada
     </div>
 
     <div class="experience-time" 
-       data-en="Oct 2023" 
-       data-vi="10/2023">
-   Oct 2023
+       data-en="Nov 2023 - When I was studying high school in Toronto" 
+       data-vi="11/2023 - Khi tôi du học cấp 3 ở Toronto">
+   Nov 2023 - When I was studying high school in Toronto
+  </div>
+
+    <div class="experience-content">
+      <p data-en="This is a winter fair in North York, Toronto. We dress up, have games and support the kids (shooting basketball, playing trains, etc.)." 
+         data-vi="Đây là một hội chợ mùa đông ở North York, Toronto. Chúng tôi mặc những bộ đồ hóa trang, tổ chức trò chơi và support các bé nhỏ (ném bóng bào rổ, chơi tàu lửa,...).">
+         This is a winter fair in North York, Toronto. We dress up, have games and support the kids (shooting basketball, playing trains, etc.).
+         <br><strong>A souvenir image:</strong><a href="https://drive.google.com/file/d/1yNc1Dvk3Bp9n6rY-LPrwBrVEc47is04H/view?usp=sharing">https://drive.google.com/file/d/1yNc1Dvk3Bp9n6rY-LPrwBrVEc47is04H/view?usp=sharing</a>
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="experience" onclick="toggleExperience(this)">
+    <div class="experience-title" 
+         data-en="4. Water Station Volunteer - United Way’s ClimbUP Event in Toronto, Canada" 
+         data-vi="4. Tình nguyện viên trạm nước - Sự kiện ClimbUP của United Way tại Toronto, Canada">
+      4. Volunteer - United Way’s ClimbUP Event in Toronto, Canada
+    </div>
+
+    <div class="experience-time" 
+       data-en="Oct 2023 - When I was studying high school in Toronto" 
+       data-vi="10/2023 - Khi tôi du học cấp 3 ở Toronto">
+   Oct 2023 - When I was studying high school in Toronto
   </div>
 
     <div class="experience-content">
